Dernier commit avant le match Belgique - Égypte ! J'ai créé les classes et layout pour l'écran d'accueil et celui de mise à jour des informations utilisateur. Ce serait cool que tu t'occupes un peu des Layouts Ju' !

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,11 @@
             android:parentActivityName=".RegisterActivity"
             android:label="Register"/>
 
+        <activity
+            android:name=".UserAreaActivity"
+            android:parentActivityName=".UserAreaActivity"
+            android:label="Home"/>
+
     </application>
 
 
